@@ -1,7 +1,7 @@
 package carRacing;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class Race {
@@ -11,21 +11,21 @@ public class Race {
             if (cars.isEmpty()) {
                 throw new IllegalArgumentException("[ERROR] 리스트가 비어있습니다.");
             }
-            this.cars = cars;
+            this.cars = new ArrayList<>(cars);
         }
 
         public void startRace(int rounds) {
             IntStream.range(0, rounds).forEach(i -> cars.forEach(Car::move));
         }
 
-        public List<Car> winners() {
+        public List<Car> winners() { // car 의 distance랑 race의 distance 가 같냐
             int maxDistance = this.cars.stream()
                     .mapToInt(Car::distance)
                     .max()
                     .orElse(0);
 
             return this.cars.stream()
-                    .filter(car -> car.distance() == maxDistance)
-                    .collect(Collectors.toList());
+                    .filter(car -> car.equalDistance(maxDistance))
+                    .toList();
         }
 }
